[infra-proxy-service] Human-readable servers id.  - Remove description and migrations to updates constraints.  - Change Server ID data type UUID to TEXT.  - Updates the query and test cases.
