# api/external/infra_proxy/infra_proxy.swagger.json
@@ -65,6 +65,7 @@
         "parameters": [
           {
             "name": "id",
+            "description": "Chef infra server ID.",
             "in": "path",
             "required": true,
             "type": "string"
@@ -87,6 +88,7 @@
         "parameters": [
           {
             "name": "id",
+            "description": "Chef infra server ID.",
             "in": "path",
             "required": true,
             "type": "string"
@@ -109,6 +111,7 @@
         "parameters": [
           {
             "name": "id",
+            "description": "Chef infra server ID.",
             "in": "path",
             "required": true,
             "type": "string"
@@ -120,30 +123,6 @@
             "schema": {
               "$ref": "#/definitions/chef.automate.api.infra_proxy.request.UpdateServer"
             }
-          }
-        ],
-        "tags": [
-          "InfraProxy"
-        ]
-      }
-    },
-    "/infra/servers/{name}": {
-      "get": {
-        "operationId": "GetServerByName",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/chef.automate.api.infra_proxy.response.GetServer"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "name",
-            "in": "path",
-            "required": true,
-            "type": "string"
           }
         ],
         "tags": [
@@ -300,38 +279,6 @@
             "schema": {
               "$ref": "#/definitions/chef.automate.api.infra_proxy.request.UpdateOrg"
             }
-          }
-        ],
-        "tags": [
-          "InfraProxy"
-        ]
-      }
-    },
-    "/infra/servers/{server_id}/orgs/{name}": {
-      "get": {
-        "operationId": "GetOrgByName",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/chef.automate.api.infra_proxy.response.GetOrg"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "server_id",
-            "description": "Chef Infra Server ID.",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "name",
-            "description": "Chef organization name.",
-            "in": "path",
-            "required": true,
-            "type": "string"
           }
         ],
         "tags": [
@@ -994,17 +941,21 @@
     "chef.automate.api.infra_proxy.request.CreateServer": {
       "type": "object",
       "properties": {
-        "name": {
-          "type": "string"
+        "id": {
+          "type": "string",
+          "description": "Chef infra server ID."
         },
-        "description": {
-          "type": "string"
+        "name": {
+          "type": "string",
+          "description": "Chef infra server name."
         },
         "fqdn": {
-          "type": "string"
+          "type": "string",
+          "description": "Chef infra server FQDN."
         },
         "ip_address": {
-          "type": "string"
+          "type": "string",
+          "description": "Chef infra server IP address."
         }
       }
     },
@@ -1044,19 +995,20 @@
       "type": "object",
       "properties": {
         "id": {
-          "type": "string"
+          "type": "string",
+          "description": "Chef infra server ID."
         },
         "name": {
-          "type": "string"
-        },
-        "description": {
-          "type": "string"
+          "type": "string",
+          "description": "Chef infra server name."
         },
         "fqdn": {
-          "type": "string"
+          "type": "string",
+          "description": "Chef infra server FQDN."
         },
         "ip_address": {
-          "type": "string"
+          "type": "string",
+          "description": "Chef infra server IP address."
         }
       }
     },
@@ -1386,7 +1338,8 @@
       "type": "object",
       "properties": {
         "server": {
-          "$ref": "#/definitions/chef.automate.api.infra_proxy.response.Server"
+          "$ref": "#/definitions/chef.automate.api.infra_proxy.response.Server",
+          "description": "Chef infra server."
         }
       }
     },
@@ -1433,7 +1386,8 @@
       "type": "object",
       "properties": {
         "server": {
-          "$ref": "#/definitions/chef.automate.api.infra_proxy.response.Server"
+          "$ref": "#/definitions/chef.automate.api.infra_proxy.response.Server",
+          "description": "Chef infra server."
         }
       }
     },
@@ -1535,7 +1489,8 @@
       "type": "object",
       "properties": {
         "server": {
-          "$ref": "#/definitions/chef.automate.api.infra_proxy.response.Server"
+          "$ref": "#/definitions/chef.automate.api.infra_proxy.response.Server",
+          "description": "Chef infra server."
         }
       }
     },
@@ -1546,7 +1501,8 @@
           "type": "array",
           "items": {
             "$ref": "#/definitions/chef.automate.api.infra_proxy.response.Server"
-          }
+          },
+          "description": "Chef infra servers."
         }
       }
     },
@@ -1900,23 +1856,25 @@
       "type": "object",
       "properties": {
         "id": {
-          "type": "string"
+          "type": "string",
+          "description": "Chef infra server ID."
         },
         "name": {
-          "type": "string"
-        },
-        "description": {
-          "type": "string"
+          "type": "string",
+          "description": "Chef infra server name."
         },
         "fqdn": {
-          "type": "string"
+          "type": "string",
+          "description": "Chef infra server FQDN."
         },
         "ip_address": {
-          "type": "string"
+          "type": "string",
+          "description": "Chef infra server IP address."
         },
         "orgs_count": {
           "type": "integer",
-          "format": "int32"
+          "format": "int32",
+          "description": "Chef organizations count associated with chef infra server."
         }
       }
     },
@@ -1942,7 +1900,8 @@
       "type": "object",
       "properties": {
         "server": {
-          "$ref": "#/definitions/chef.automate.api.infra_proxy.response.Server"
+          "$ref": "#/definitions/chef.automate.api.infra_proxy.response.Server",
+          "description": "Chef infra server."
         }
       }
     }
